--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
-"scripts": {
-
-    "start": "node server.js"
-  
+{
+  "name": "finalprojectcsc227",
+  "version": "1.0.0",
+  "description": "",
+  "main": "hello-world.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
-  "main": "server.js"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tamcgregor/FinalProjectCSC227.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tamcgregor/FinalProjectCSC227/issues"
+  },
+  "homepage": "https://github.com/tamcgregor/FinalProjectCSC227#readme"
+}
