--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "hello-world.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node hello-world.js"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tamcgregor/FinalProjectCSC227.git"
