--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "finalprojectcsc227",
   "version": "1.0.0",
-  "description": "",
   "main": "hello-world.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,7 @@
   "homepage": "https://github.com/tamcgregor/FinalProjectCSC227#readme",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
