--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "hello-world.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node hello-world.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
